[gd_scene load_steps=2 format=3 uid="uid://cysoiu7uq7gun"]

[ext_resource type="Script" path="res://Scripts/site_box_script.gd" id="1_pft76"]

[node name="SiteElementVBox" type="HBoxContainer"]
offset_right = 704.0
offset_bottom = 32.0
size_flags_horizontal = 3
theme_override_constants/separation = 16
script = ExtResource("1_pft76")

[node name="SitesHBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
alignment = 1

[node name="SiteLable" type="Label" parent="SitesHBox"]
layout_mode = 2
text = "Site ID:"

[node name="SiteLineEdit" type="LineEdit" parent="SitesHBox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="WhitespaceHBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="WhiteSpaceLabel" type="Label" parent="WhitespaceHBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Whitespace:"

[node name="WhiteSpaceTextEdit" type="TextEdit" parent="WhitespaceHBox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
size_flags_horizontal = 3
editable = false
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="SeparatorHBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="SeparatorLablel" type="Label" parent="SeparatorHBox"]
layout_mode = 2
text = "Separator:"

[node name="SeparatorTextEdit" type="TextEdit" parent="SeparatorHBox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
size_flags_horizontal = 3
editable = false
draw_control_chars = true
draw_tabs = true
draw_spaces = true
